--- a/public/add_event.html
+++ b/public/add_event.html
@@ -13,9 +13,10 @@
     <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
 
     <script src="/javascripts/add_event.js"></script>
+    <script src="/javascripts/login.js"></script>
 
 </head>
-<body>
+<body onload="getProfile()">
    <!-- nav bar -->
    <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
         <header>
@@ -28,10 +29,10 @@
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
                 <div class="menu-div" >
-                    <a onclick="signOut();" class="link-black menu-btn">Sign out</a>
+                    <a href="Dashboard.html" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
-                    <button type="button" class="blue-btn">Profile
+                    <button type="button" class="blue-btn" id="profile-name">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
                     </button>
 
@@ -39,6 +40,7 @@
                     <div class="settings">
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
+                        <a href="index.html" class="link-black" onclick="signOut()">Sign Out</a>
                     </div>
 
                 </div>
