--- a/public/book_event.html
+++ b/public/book_event.html
@@ -13,7 +13,9 @@
 
     <script src="https://kit.fontawesome.com/2385786b33.js" crossorigin="anonymous"></script>
     <script src="javascripts/book_event.js"></script>
+    <script src="/javascripts/login.js"></script>
 
+    <!-- for google calendar -->
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 </head>
@@ -33,7 +35,7 @@
                     <a href="#user-dashboard" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
-                    <button type="button" class="blue-btn">Profile
+                    <button type="button" class="blue-btn" id="profile-name">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
                     </button>
 
@@ -41,6 +43,7 @@
                     <div class="settings">
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
+                        <a href="index.html" class="link-black" onclick="signOut()">Sign Out</a>
                     </div>
 
                 </div>
