--- a/public/email-settings.html
+++ b/public/email-settings.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="stylesheets/header.css"> <!--link to get header format-->
         <link rel="stylesheet" href="stylesheets/buttons.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
+        <script src="/javascripts/login.js"></script>
     </head>
-    <body>
+    <body onload="getProfile()">
         <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
         <header>
 
@@ -20,16 +21,17 @@
             <!--container for links to Home and Profile settings-->
             <div class="top-right-menu">
                 <div class="menu-div" >
-                    <a onclick="signOut();" class="link-black menu-btn">Sign out</a>
+                    <a href="Dashboard.html" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
-                    <button type="button" class="blue-btn">Jane Doe
+                    <button type="button" class="blue-btn" id="profile-name">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
                     </button>
                     <!-- settings to be shown from dropdown menu -->
                     <div class="settings">
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
+                        <a href="index.html" class="link-black" onclick="signOut()">Sign Out</a>
                     </div>
                 </div>
             </div>
