--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -31,25 +31,6 @@
         <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
     </div>
 
-    <!--container for links to Home and Profile settings-->
-    <div class="top-right-menu">
-        <div class="menu-div">
-            <a href="#user-dashboard" class="link-black menu-btn">Home</a>
-        </div>
-        <div class="settings-dropdown">
-            <button type="button" class="blue-btn">Profile
-                <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
-            </button>
-
-            <!-- settings to be shown from dropdown menu -->
-            <div class="settings">
-                <a href="user-account.html" class="link-black">Account Settings</a>
-                <a href="email-settings.html" class="link-black">Email Settings</a>
-            </div>
-
-        </div>
-    </div>
-
 </header>
 <hr />
 
@@ -58,7 +39,7 @@
     <h1>Log in to continue</h1>
         <div class="socialMedia">
             <div id="google">
-                <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
+                <div class="g-signin2" onload="googleSignOut()"  data-onsuccess="onSignIn" data-longtitle="true" data-width="220" data-height="50">
             </div>
         </div>
 
