--- a/public/show_event.html
+++ b/public/show_event.html
@@ -14,8 +14,8 @@
 
     <script src="https://kit.fontawesome.com/2385786b33.js" crossorigin="anonymous"></script>
     <script src="javascripts/book_event.js"></script>
-    <script src="javascripts/add_event.js"></script>
     <script src="javascripts/show_event.js"></script>
+    <script src="/javascripts/login.js"></script>
 
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
@@ -36,7 +36,7 @@
                     <a href="/Dashboard.html" class="link-black menu-btn">Home</a>
                 </div>
                 <div class="settings-dropdown">
-                    <button type="button" class="blue-btn">Profile
+                    <button type="button" class="blue-btn" id="profile-name">Profile
                         <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
                     </button>
 
@@ -44,6 +44,7 @@
                     <div class="settings">
                         <a href="user-account.html" class="link-black">Account Settings</a>
                         <a href="email-settings.html" class="link-black">Email Settings</a>
+                        <a href="index.html" class="link-black" onclick="signOut()">Sign Out</a>
                     </div>
 
                 </div>
@@ -96,7 +97,7 @@
     <button id="submit-button">Finalise Time</button>
 
     <!-- Cancel button -->
-    <button id="cancel-button" onclick="window.location.href='/Dashboard.html'">Back to Dashboard</button>
+    <button id="cancel-button" onclick="window.location.href='/Dashboard.html'">Dashboard</button>
 
 </div>
 
