Fri, Jun 10, 2022, 10:51 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -23,7 +23,8 @@
 
             <!--Logo/website name-->
             <div>
-                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
+                <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
+                <div class= “header-image”>
             </div>
 
             <!--container for links to Home and Profile settings-->
