Fri, Jun 10, 2022, 10:57 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -19,12 +19,11 @@
 <body onload="getProfile()">
    <!-- nav bar -->
    <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-        <header>
+        <header class= “header-image”>
 
             <!--Logo/website name-->
             <div>
                 <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
-                <div class= “header-image”>
             </div>
 
             <!--container for links to Home and Profile settings-->
