Fri, Jun 10, 2022, 11:27 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -19,10 +19,10 @@
 <body onload="getProfile()">
    <!-- nav bar -->
    <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-        <header class= “header-image”>
+        <header>
 
             <!--Logo/website name-->
-            <div>
+            <div class= “header-image”>
                 <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
             </div>
 
