Fri, Jun 10, 2022, 11:30 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -14,7 +14,7 @@
 
     <script src="/javascripts/add_event.js"></script>
     <script src="/javascripts/login.js"></script>
-
+    <link rel="icon" href="favicon.png">
 </head>
 <body onload="getProfile()">
    <!-- nav bar -->
@@ -23,7 +23,7 @@
 
             <!--Logo/website name-->
             <div class= “header-image”>
-                <!-- <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a> -->
+                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
 
             <!--container for links to Home and Profile settings-->
