Fri, Jun 10, 2022, 11:34 AM +00:00

--- a/public/add_event.html
+++ b/public/add_event.html
@@ -14,7 +14,7 @@
 
     <script src="/javascripts/add_event.js"></script>
     <script src="/javascripts/login.js"></script>
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="stylesheets/favicon.png">
 </head>
 <body onload="getProfile()">
    <!-- nav bar -->
