--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -61,8 +61,8 @@
 
     <!-- Create & Join Event Buttons -->
     <div class="buttons">
-        <button type="button" id="GreyButton" type="button" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
-        <button type="button" id="GreyButton" type="button" onclick="showEventSearch()"><i class="fa-solid fa-link"></i> Join Event </button>
+        <button type="button" class="GreyButton" type="button" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
+        <button type="button" class="GreyButton" type="button" onclick="showEventSearch()"><i class="fa-solid fa-link"></i> Join Event </button>
     </div>
 
     <!--The popup join event container-->
