--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -60,6 +60,9 @@
                         <div id="passwordInput" class="inputs">
                             <input id="name3" name="password" type="password" placeholder="Password" required>
                         </div>
+                        <div id="passwordInput" class="inputs">
+                            <input type="password" placeholder="Confirm Password" required>
+                        </div>
                         <br>
                         <div class="login">
                             <button id="purple-button" type="submit" onclick="signup()">Sign up</button>
