--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -57,7 +57,7 @@
         <br>
 
         <div class="login">
-            <button id="purple-button" type="submit" onclick="login()">Login</button>
+            <button class="purple-button" type="submit" onclick="login()">Login</button>
         </div>
     </div>
     <br>
