--- a/public/signUpPage.html
+++ b/public/signUpPage.html
@@ -62,7 +62,7 @@
                         </div>
                         <br>
                         <div class="login">
-                            <button id="purple-button" type="submit" onclick="signup()">Sign up</button>
+                            <button class="purple-button" type="submit" onclick="signup()">Sign up</button>
                         </div>
                         <br>
                         <div>
