--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -16,7 +16,7 @@
 
         <div>
             <form>
-                <input id="fn" name=firstName type="text" placeholder="First Name"<br>
+                <input id="fn" name=firstName type="text" placeholder="First Name"><br>
                 <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
                 <button type="button" onclick="guest()">Submit</button>
             </form>
