Fri, Jun 10, 2022, 1:38 PM +00:00

--- a/public/show_event.html
+++ b/public/show_event.html
@@ -79,7 +79,7 @@
 
     <!-- Link generation -->
     <h3>Link for non-account holders</h3>
-    <button type="button" onclick="generateLink()">Generate a unique link</button>
+    <button id="generate_button" type="button" onclick="generateLink()">Generate a unique link</button>
     <p class="p" id="no-account-link"></p><br/>
 
     <!-- Finalise event time -->
