--- a/public/pop_up_guest.html
+++ b/public/pop_up_guest.html
@@ -5,6 +5,8 @@
 
         <meta charset="UTF-8">
         <title>Guest Details</title>
+        <link rel="stylesheet" href="stylesheets/settings.css"> <!--link to get specific elements for settings pages-->
+        <link rel="stylesheet" href="stylesheets/buttons.css"> <!--link to get buttons format-->
         <script src="/javascripts/user_no_acc.js"></script>
 
     </head>
@@ -18,7 +20,7 @@
             <form>
                 <input id="fn" name=firstName type="text" placeholder="First Name"><br>
                 <input id="ln" name=lastName type="text" placeholder="Last Name"><br><br>
-                <button type="button" onclick="guest()">Submit</button>
+                <button type="button" onclick="guest()" class="small-blue-btn">Submit</button>
             </form>
         </div>
 
