--- a/public/user-account.html
+++ b/public/user-account.html
@@ -62,7 +62,7 @@
 
                     <!-- USER DETAILS -->
                     <h3>User Details</h3>
-                    <h4 id="user-name"></h4>
+                    <b id="user-name"></b>
                     <form>
                         <label for="firstname">First Name</label><br />
                         <input type="text" id="firstname" name="firstname"><br><br>
@@ -95,7 +95,7 @@
                             <!--container for cancel and save buttons-->
                             <div class="cancel-save">
                                 <!--<button type="button" class="white-btn" onclick="hidePopup()">Cancel</button><br><br>-->
-                                <button type="button" class="small-blue-btn" onclick="changeEmail()">Save<br><br>
+                                <button type="button" class="small-blue-btn" onclick="changeEmail()">Save</button><br><br>
                             </div>
                         </form>
 
@@ -130,7 +130,7 @@
 
                             <div class="cancel-save">
                                 <!--<button type="button" class="white-btn" onclick="hidePopup()">Cancel</button><br><br>-->
-                                <button type="button" class="small-blue-btn" onclick="changePassword()">Save<br><br>
+                                <button type="button" class="small-blue-btn" onclick="changePassword()">Save</button><br><br>
                             </div>
                         </form>
 
