--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -62,8 +62,8 @@
 
     <!-- Create & Join Event Buttons -->
     <div class="buttons">
-        <button type="button" class="GreyButton" type="button" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
-        <button type="button" class="GreyButton" type="button" onclick="showEventSearch()"><i class="fa-solid fa-link"></i> Join Event </button>
+        <button type="button" class="GreyButton" onclick="window.location.href='/add_event.html'"><i class="fa-solid fa-plus"></i> Create Event </button>
+        <button type="button" class="GreyButton" onclick="showEventSearch()"><i class="fa-solid fa-link"></i> Join Event </button>
     </div>
 
     <!--The popup join event container-->
@@ -107,8 +107,8 @@
             <!-- Expandable filter section -->
             <template>
                 <div v-if="showFilter" id="filterSection">
-                    <button id="GreyButton">By Date </button>
-                    <button id="GreyButton">By Name </button>
+                    <button class="GreyButton">By Date </button>
+                    <button class="GreyButton">By Name </button>
                 </div>
             </template>
             <br><br>
